remove browser scrollbar and fix internal login style

--- a/bensdeli/static/css/index.css
+++ b/bensdeli/static/css/index.css
@@ -4,6 +4,10 @@
     font-family: 'FreestyleScript', sans-serif;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 @font-face {
     font-family: 'FreestyleScript';
     src: url('../fonts/freestyleScript.TTF') format('truetype');
